; ModuleID = '/home/carl/AnghaBench/linux/kernel/extr_groups.c_in_egroup_p.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/extr_groups.c_in_egroup_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cred = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @in_egroup_p(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cred*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = call %struct.cred* (...) @current_cred()
  store %struct.cred* %5, %struct.cred** %3, align 8
  store i32 1, i32* %4, align 4
  %6 = load i32, i32* %2, align 4
  %7 = load %struct.cred*, %struct.cred** %3, align 8
  %8 = getelementptr inbounds %struct.cred, %struct.cred* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @gid_eq(i32 %6, i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %18, label %12

12:                                               ; preds = %1
  %13 = load %struct.cred*, %struct.cred** %3, align 8
  %14 = getelementptr inbounds %struct.cred, %struct.cred* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @groups_search(i32 %15, i32 %16)
  store i32 %17, i32* %4, align 4
  br label %18

18:                                               ; preds = %12, %1
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local %struct.cred* @current_cred(...) #1

declare dso_local i32 @gid_eq(i32, i32) #1

declare dso_local i32 @groups_search(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
